/**
 * Copyright (C) 2019 Open Whisper Systems
 *
 * Licensed according to the LICENSE file in this repository.
 */
syntax = "proto2";

package signalservice;

option java_package         = "org.whispersystems.signalservice.internal.sticker";
option java_outer_classname = "StickerProtos";

message Pack {
    message Sticker {
        optional uint32 id          = 1;
        optional string emoji       = 2;
        optional string contentType = 3;
    }

    optional string  title    = 1;
    optional string  author   = 2;
    optional Sticker cover    = 3;
    repeated Sticker stickers = 4;
}

